<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.redis.om</groupId>
    <artifactId>redis-om-spring-parent</artifactId>
    <version>1.0.0-RC1</version>
    <name>redis-om-spring-parent</name>
    <description>Redis OM Spring provides powerful repository and custom object-mapping abstractions built on top of the
        powerful Spring Data Redis (SDR) framework.
    </description>
    <url>https://github.com/redis/redis-om-spring</url>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>MIT license</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/redis/redis-om-spring</url>
        <connection>scm:git:git://github.com/redis/redis-om-spring.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/redis/redis-om-spring.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <id>bsbodden</id>
            <name>Brian Sam-Bodden</name>
            <email>bsb at redis.com</email>
            <organization>Redis</organization>
            <organizationUrl>https://www.redis.com</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>America/Phoenix</timezone>
        </developer>
        <developer>
            <id>foogaro</id>
            <name>Luigi Fugaro</name>
            <email>luigi at redis.com</email>
            <organization>Redis</organization>
            <organizationUrl>https://www.redis.com</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>Europe/Rome</timezone>
            <url>https://github.com/foogaro</url>
        </developer>
        <developer>
            <id>raphaeldelio</id>
            <name>Raphael Delio</name>
            <email>raphael at redis.com</email>
            <organization>Redis</organization>
            <organizationUrl>https://www.redis.com</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>Europe/Berlin</timezone>
            <url>https://github.com/raphaeldelio</url>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.test.source>21</maven.test.source>
        <maven.test.target>21</maven.test.target>
        <java.version>21</java.version>
        <spotless.version>2.44.4</spotless.version>
        <jreleaser.version>1.10.0</jreleaser.version>
        <main.basedir>${project.basedir}</main.basedir>
        <spring.version>3.4.5</spring.version>
        <sdr.version>3.4.5</sdr.version>
        <jedis.version>5.2.0</jedis.version>
        <cdi>2.0-PFD</cdi>
        <auto-service.version>1.1.1</auto-service.version>
        <testcontainers.redis.version>2.2.2</testcontainers.redis.version>
        <testcontainers.redis.junit.version>2.2.2</testcontainers.redis.junit.version>
        <testcontainers.junit.jupiter>1.19.7</testcontainers.junit.jupiter>
        <guava.version>33.1.0-jre</guava.version>
        <ulid.version>5.2.3</ulid.version>
        <lombok.version>1.18.32</lombok.version>
        <commons-lang.version>3.13.0</commons-lang.version>
        <javapoet.version>1.13.0</javapoet.version>
        <assertj.version>3.25.3</assertj.version>
        <elementary.version>2.0.1</elementary.version>
        <gson.version>2.10.1</gson.version>
        <djl.starter.version>0.26</djl.starter.version>
        <djl.version>0.30.0</djl.version>
        <junit-bom.version>5.10.2</junit-bom.version>
        <spring-ai.version>1.0.0-M8</spring-ai.version>
        <azure-identity.version>1.15.4</azure-identity.version>
        <redis-om-spring.version>1.0.0-RC1</redis-om-spring.version>
    </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.version}</version>
          <configuration>
            <java>
              <!-- Use Eclipse formatter with custom config -->
              <eclipse>
                <file>${project.basedir}/.spotless/roms-style.xml</file>
              </eclipse>
              <removeUnusedImports />
              <importOrder>
                <order>java,javax,org,com,</order>
              </importOrder>
            </java>
            <lineEndings>UNIX</lineEndings>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>

        <!-- Configure Maven Deploy Plugin -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>

        <!-- Add JReleaser plugin -->
        <plugin>
          <groupId>org.jreleaser</groupId>
          <artifactId>jreleaser-maven-plugin</artifactId>
          <version>${jreleaser.version}</version>
          <configuration>
            <jreleaser>
              <signing>
                <active>ALWAYS</active>
                <armored>true</armored>
              </signing>
              <deploy>
                <maven>
                  <mavenCentral>
                    <redis>
                      <active>RELEASE</active>
                      <url>https://central.sonatype.com/api/v1/publisher</url>
                      <applyMavenCentralRules>true</applyMavenCentralRules>
                      <stagingRepositories>
                        <stagingRepository>target/staging-deploy</stagingRepository>
                      </stagingRepositories>
                    </redis>
                  </mavenCentral>
                </maven>
              </deploy>
            </jreleaser>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

    <modules>
        <!-- Main Project -->
        <module>redis-om-spring</module>
        <module>redis-om-spring-ai</module>
        <module>tests</module>
        <!-- Demos -->
        <module>demos/roms-documents</module>
        <module>demos/roms-hashes</module>
        <module>demos/roms-permits</module>
        <module>demos/roms-vss</module>
        <module>demos/roms-vss-movies</module>
        <module>demos/roms-amr-entraid</module>
        <module>demos/roms-modeling</module>
        <module>demos/roms-vectorizers</module>
    </modules>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <id>maven-central</id>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>publication</id>
            <properties>
                <altDeploymentRepository>local::file:./target/staging-deploy</altDeploymentRepository>
            </properties>
            <build>
                <defaultGoal>deploy</defaultGoal>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <configuration>
                            <failOnError>false</failOnError>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <attach>true</attach>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <attach>true</attach>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
